--- a/{{cookiecutter.project_name}}/.github/workflows/miss_hit.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/miss_hit.yml
@@ -31,7 +31,7 @@ jobs:
         fetch-depth: 1
 
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: 3.9
 
@@ -39,7 +39,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools
         pip3 install -r requirements.txt
-
+{% raw %}
     - name: ${{ matrix.command }}
       run: |
         ${{ matrix.command }}
+{% endraw %}
